# Heyy-HP

./: .env.example  .gitignore  CHANGELOG.md  README.md  build_log.txt  build_windows.py  generate_icon.py  hp.spec  main.py  pyproject.toml  setup_sprint3.py  setup_sprint4.py  setup_sprint5.py  setup_sprint6.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __version__.py
app/actions/: browser.py  files.py  launcher.py
app/assistant/: __init__.py  dispatcher.py  machine.py  state.py  timer.py
app/config/: __init__.py  settings.py
app/llm/: base.py  claude_provider.py  conversation.py  factory.py  groq_provider.py  ollama_provider.py  stub.py
app/memory/: db.py  history.py  memories.py  reminders.py  routines.py  tasks.py
app/services/: icloud_reminders.py  startup.py
app/ui/: __init__.py  app.py  arc_reactor.py  main_window.py  settings_panel.py  tray.py  voice_bridge.py
app/utils/: logging.py
app/vision/: capture.py  hands.py  identifier.py  pipeline.py
app/voice/: audio.py  runtime.py  stt.py  tts.py  vad.py  wakeword.py
docs/architecture/: coding-standards.md  system-overview.md
docs/decisions/: adr-001-desktop-framework.md  adr-002-stt-choice.md  adr-003-wakeword-choice.md
docs/releases/: v0.1.0.md
docs/runbooks/: dev-setup.md
requirements/: base.txt  dev.txt  prod.txt
tests/: conftest.py
tests/unit/: test_actions_browser.py  test_actions_files.py  test_actions_launcher.py  test_assistant_dispatcher.py  test_assistant_dispatcher_sprint5.py  test_assistant_machine.py  test_assistant_machine_sprint4.py  test_assistant_state.py  test_assistant_timer.py  test_config.py  test_llm_conversation.py  test_llm_factory.py  test_llm_stub.py  test_logging.py  test_memory_db.py  test_memory_history.py  test_memory_routines.py  test_services_startup.py  test_ui_main_window.py  test_ui_settings_panel.py  test_vision_pipeline.py  test_voice_interruption.py  test_voice_stt.py  test_voice_tts.py  test_voice_vad.py  test_voice_wakeword.py
